examples/LINUX/tests/errors/macro-redefinition.biplan

// Macro redefinition, 2 different macro definitions 
// with the same name are provided.
print "test"
macro TEST print "test"
macro TEST print "test2"

TEST
stop